# ogmios

./: .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  .hlint.yaml  .hpack.config.yaml  .stylish-haskell.yaml  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Main.hs  Makefile  README.md  SPONSORS.md  api-reference.html  cabal.project  cardano.json  create-machine.sh  default.nix  docker-compose.yml  flake.nix  index.html  index.json  index.xml  main.css  ogmios.html  ogmios.json  ogmios.wsp.json  openapi.yaml  package.yaml  resolver.yaml  shell.nix  sitemap.xml  snapshot.Dockerfile  snapshot.yaml  (+1 more)
.circleci/: cache.Dockerfile  config.yml  regenerate-cache.sh  test.Dockerfile
.docker/: package.yaml
.github/: FUNDING.yml  formula.rb.template
.github/DISCUSSION_TEMPLATE/: ideas-feature-requests.yaml
.github/ISSUE_TEMPLATE/: bug.md  bug.yaml  idea.md  idea.yaml  project.md  question.md
.github/scripts/: from-github.sh  wait-for-sync.sh
.github/workflows/: Package.cabal  build.yaml  coding-style.yaml  continuous-integration.yaml  devx.yaml  docker.yaml  lint.yaml  network-synchronization.yaml  nix.yaml  package.yaml  post-release.yaml  user-guide.yaml  user-guide.yml  wip.yaml
api/: cardano.json  index.html  index.xml  modules.html  specification.yaml
api-reference/: index.html  index.xml
api/classes/: _cardano_ogmios_client.AcquirePointNotOnChainError.html  _cardano_ogmios_client.AcquirePointTooOldError.html  _cardano_ogmios_client.ChainSync.IntersectionNotFoundError.html  _cardano_ogmios_client.ChainSync.UnknownResultError.html  _cardano_ogmios_client.EraMismatchError.html  _cardano_ogmios_client.IntersectionNotFoundError.html  _cardano_ogmios_client.QueryUnavailableInCurrentEraError.html  _cardano_ogmios_client.ServerNotReady.html  _cardano_ogmios_client.StateQuery.AcquirePointNotOnChainError.html  _cardano_ogmios_client.StateQuery.AcquirePointTooOldError.html  _cardano_ogmios_client.StateQuery.EraMismatchError.html  _cardano_ogmios_client.StateQuery.QueryUnavailableInCurrentEraError.html  _cardano_ogmios_client.UnknownResultError.html
api/interfaces/: _cardano_ogmios_client.ChainSync.ChainSyncClient.html  _cardano_ogmios_client.ChainSync.ChainSyncMessageHandlers.html  _cardano_ogmios_client.Connection.html  _cardano_ogmios_client.ConnectionConfig.html  _cardano_ogmios_client.InteractionContext.html  _cardano_ogmios_client.Schema.AcquireFailure.html  _cardano_ogmios_client.Schema.AcquireSuccess.html  _cardano_ogmios_client.Schema.AcquireSuccess1.html  _cardano_ogmios_client.Schema.AddressAttributesTooLarge.html  _cardano_ogmios_client.Schema.All.html  _cardano_ogmios_client.Schema.Allegra.html  _cardano_ogmios_client.Schema.Alonzo.html  _cardano_ogmios_client.Schema.AlreadyDelegating.html  _cardano_ogmios_client.Schema.Any.html  (+380 more)
api/v5.6/: index.html
app/: Main.hs
architectural-decisions/: .template.md  pass-explicit-json-codecs.md
categories/: index.html  index.xml
changelog/: index.html  index.xml
clients/: index.html  index.xml
css/: api-reference.css  asyncapi-override.css  theme-mine.css
custom-config/: default.nix  flake.nix
demo/: WebSocket-polyfill.js  demo.js  index.html
deployment/: index.html  index.xml
docs/: AWS_DEPLOYMENT.md  COMMAND_LINE.md  README.md  config.toml
faq/: index.html  index.xml
getting-started/: index.html  index.xml
http-api/: index.html  index.xml
mini-protocols/: index.html  index.xml
nix/: default.nix  haskell-nix-cabal.project  haskell.nix  pkgs.nix  regenerate.sh  scripts.nix  sources.json
ogmios-server/: CHANGELOG.md  PLAN.md  README.md  ogmios.wsp.json  package.yaml
perSystem/: devShells.nix  hydraJobs.nix  packages.nix  project.nix
scripts/: cachix.sh  cardano-node-ogmios.sh  exec-from-github.sh  generate-api-reference.sh  wait-for-sync.sh
server/: .dockerignore  .gitignore  .hlint.yaml  .hpack.config.yaml  .stylish-haskell.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  TODO_bis  cabal.project  cabal.project.freeze  cardano.json  hie.yaml  ogmios.cabal  ogmios.json  ogmios.wsp.json  package.yaml  resolver.yaml  run-ogmios  snapshot.Dockerfile  stack.yaml  tmp.tx
server/modules/cardano-client/: CHANGELOG.md  README.md  cardano-client.cabal  package.yaml
server/modules/cardano-client/src/Cardano/Network/Protocol/: NodeToClient.hs
server/modules/cardano-client/src/Cardano/Network/Protocol/NodeToClient/: Trace.hs
server/modules/fast-bech32/: CHANGELOG.md  README.md  fast-bech32.cabal  package.yaml
server/modules/fast-bech32/src/Data/ByteString/: Bech32.hs
server/modules/fast-bech32/test/unit/: Spec.hs
server/modules/fast-bech32/test/unit/Data/ByteString/: Bech32Spec.hs
server/modules/git-th/: CHANGELOG.md  README.md  git-th.cabal  package.yaml
server/modules/git-th/src/Data/Git/Revision/: TH.hs
server/modules/git-th/test/unit/: Spec.hs
server/modules/git-th/test/unit/Data/Git/Revision/: THSpec.hs
server/modules/hspec-json-schema/: CHANGELOG.md  README.md  hspec-json-schema.cabal  package.yaml
server/modules/hspec-json-schema/src/Test/Hspec/Json/: Schema.hs
server/modules/hspec-json-schema/test/: Spec.hs
server/modules/hspec-json-schema/test/Test/Hspec/Json/: SchemaSpec.hs
server/modules/hspec-json-schema/test/schemas/: 002.json  005.json  006.json  007.json
server/modules/json-via-show/: CHANGELOG.md  README.md  json-via-show.cabal  package.yaml
server/modules/json-via-show/src/Data/Aeson/Via/: Show.hs
server/modules/json-via-show/src/Data/Aeson/Via/Show/: Internal.hs
server/modules/json-via-show/test/unit/: Spec.hs
server/modules/json-via-show/test/unit/Data/Aeson/Via/: ShowSpec.hs
server/modules/json-wsp/: CHANGELOG.md  README.md  json-wsp.cabal  package.yaml
server/modules/json-wsp/src/Codec/Json/: Wsp.hs
server/modules/json-wsp/src/Codec/Json/Wsp/: Handler.hs
server/modules/json-wsp/test/unit/: Spec.hs
server/modules/json-wsp/test/unit/Codec/Json/: WspSpec.hs
static/: benchmark.html
tags/: index.html  index.xml
typescript-client/: index.html  index.xml
(+4109 files in other folders)
