cabal-version:  2.4
name:           cardano-client
version:        1.0.0
synopsis:       Utilities to build a cardano client using the Ouroboros mini-protocols
description:    Please see the README on GitHub at <https://github.com/cardanosolutions/ogmios/tree/master/server/modules/cardano-client>
category:       Cardano
homepage:       https://github.com/cardanosolutions/ogmios#readme
bug-reports:    https://github.com/cardanosolutions/ogmios/issues
author:         KtorZ <matthias.benkort@gmail.com>
maintainer:     matthias.benkort@gmail.com
copyright:      2020-2021 KtorZ
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    LICENSE
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/cardanosolutions/ogmios

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wpartial-fields -Wredundant-constraints -Wunused-packages

library
  import: common-ghc-options
  exposed-modules:
      Cardano.Network.Protocol.NodeToClient
      Cardano.Network.Protocol.NodeToClient.Trace
  other-modules:
      Paths_cardano_client
  hs-source-dirs:
      src
  default-extensions:
      BangPatterns
      BinaryLiterals
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      EmptyDataDecls
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      NumericUnderscores
      OverloadedStrings
      PartialTypeSignatures
      PatternGuards
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeFamilies
      TypeSynonymInstances
      ViewPatterns
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , cardano-ledger-byron
    , cborg
    , containers
    , contra-tracer
    , io-classes
    , iohk-monitoring
    , network-mux
    , ouroboros-consensus
    , ouroboros-consensus-byron
    , ouroboros-consensus-cardano
    , ouroboros-consensus-shelley
    , ouroboros-network
    , ouroboros-network-framework
    , typed-protocols
    , typed-protocols-cborg
  default-language: Haskell2010
