cabal-version:  2.4
name:           fast-bech32
version:        1.0.0
synopsis:       Fast implementation of the Bech32 encoding format.
description:    Please see the README on GitHub at <https://github.com/cardanosolutions/ogmios/tree/master/server/modules/fast-bech32>
category:       Codec
homepage:       https://github.com/cardanosolutions/ogmios#readme
bug-reports:    https://github.com/cardanosolutions/ogmios/issues
author:         KtorZ <matthias.benkort@gmail.com>
maintainer:     matthias.benkort@gmail.com
copyright:      2021 KtorZ
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    LICENSE
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/cardanosolutions/ogmios

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wpartial-fields -Wredundant-constraints -Wunused-packages

common common-extensions
  default-extensions:
      BangPatterns
      BinaryLiterals
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      EmptyDataDecls
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      NumericUnderscores
      OverloadedStrings
      PartialTypeSignatures
      PatternGuards
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeFamilies
      TypeSynonymInstances
      ViewPatterns

library
  import: common-ghc-options
  import: common-extensions
  exposed-modules:
      Data.ByteString.Bech32
  other-modules:
      Paths_fast_bech32
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , bytestring
    , relude
    , text
  if true
    ghc-options: -O2
  default-language: Haskell2010

test-suite unit
  import: common-ghc-options
  import: common-extensions
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Data.ByteString.Bech32Spec
      Paths_fast_bech32
  hs-source-dirs:
      test/unit
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , base16
    , bech32
    , bytestring
    , fast-bech32
    , hspec
    , text
  default-language: Haskell2010

benchmark encoding
  import: common-ghc-options
  import: common-extensions
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  type: exitcode-stdio-1.0
  main-is: Encoding.hs
  other-modules:
      Paths_fast_bech32
  hs-source-dirs:
      bench
  build-depends:
      base >=4.7 && <5
    , bech32
    , bytestring
    , criterion
    , fast-bech32
    , random-bytestring
  default-language: Haskell2010
