cabal-version:  2.4
name:           git-th
version:        1.1.0
synopsis:       Compile-time helpers to access git informations.
description:    Please see the README on GitHub at <https://github.com/cardanosolutions/ogmios/tree/master/server/modules/git-th>
category:       Development
homepage:       https://github.com/cardanosolutions/ogmios#readme
bug-reports:    https://github.com/cardanosolutions/ogmios/issues
author:         KtorZ <matthias.benkort@gmail.com>
maintainer:     matthias.benkort@gmail.com
copyright:      2020-2021 KtorZ
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    LICENSE
    README.md
    CHANGELOG.md

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wpartial-fields -Wredundant-constraints -Wunused-packages

common common-extensions
  default-extensions:
      BangPatterns
      BinaryLiterals
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      EmptyDataDecls
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      NumericUnderscores
      OverloadedStrings
      PartialTypeSignatures
      PatternGuards
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeFamilies
      TypeSynonymInstances
      ViewPatterns

source-repository head
  type: git
  location: https://github.com/cardanosolutions/ogmios

library
  import: common-ghc-options
  import: common-extensions
  exposed-modules:
      Data.Git.Revision.TH
  other-modules:
      Paths_git_th
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , process
    , template-haskell
  default-language: Haskell2010

test-suite integration
  import: common-ghc-options
  import: common-extensions
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Data.Git.Revision.THSpec
      Paths_git_th
  hs-source-dirs:
      test/unit
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , git-th
    , hspec
    , template-haskell
    , temporary
  default-language: Haskell2010
