cabal-version:  2.4
name:           hspec-json-schema
version:        1.0.0
synopsis:       For testing arbitrarily generated JSON instances against JSON schemas draft4.
description:    Please see the README on GitHub at <https://github.com/cardanosolutions/ogmios/tree/master/server/modules/hspec-json-schema>
category:       Test
homepage:       https://github.com/cardanosolutions/ogmios#readme
bug-reports:    https://github.com/cardanosolutions/ogmios/issues
author:         KtorZ <matthias.benkort@gmail.com>
maintainer:     matthias.benkort@gmail.com
copyright:      2020-2021 KtorZ
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    LICENSE
    README.md
    CHANGELOG.md

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wpartial-fields -Wredundant-constraints -Wunused-packages

common common-extensions
  default-extensions:
      BangPatterns
      BinaryLiterals
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      EmptyDataDecls
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      NumericUnderscores
      OverloadedStrings
      PartialTypeSignatures
      PatternGuards
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeFamilies
      TypeSynonymInstances
      ViewPatterns

source-repository head
  type: git
  location: https://github.com/cardanosolutions/ogmios

library
  import: common-ghc-options
  import: common-extensions
  exposed-modules:
      Test.Hspec.Json.Schema
  other-modules:
      Paths_hspec_json_schema
  hs-source-dirs:
      src
  build-depends:
      QuickCheck
    , aeson
    , aeson-pretty
    , ansi-wl-pprint
    , base >=4.7 && <5
    , bytestring
    , hjsonpointer
    , hjsonschema
    , scientific
    , text
  default-language: Haskell2010

test-suite unit
  import: common-ghc-options
  import: common-extensions
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Data.String.Interpolate.Extra
      Test.Hspec.Json.SchemaSpec
      Paths_hspec_json_schema
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , aeson
    , base >=4.7 && <5
    , hspec
    , hspec-json-schema
    , string-interpolate
    , text
  default-language: Haskell2010
