cabal-version:  2.4
name:           json-via-show
version:        2.0.0
synopsis:       Generic ToJSON instance deriving via Show
description:    Please see the README on GitHub at <https://github.com/cardanosolutions/ogmios/tree/master/server/modules/json-via-show>
category:       Codec
homepage:       https://github.com/cardanosolutions/ogmios#readme
bug-reports:    https://github.com/cardanosolutions/ogmios/issues
author:         KtorZ <matthias.benkort@gmail.com>
maintainer:     matthias.benkort@gmail.com
copyright:      2021 KtorZ
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    LICENSE
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/cardanosolutions/ogmios

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wpartial-fields -Wredundant-constraints -Wunused-packages

common common-extensions
  default-extensions:
      BangPatterns
      BinaryLiterals
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      EmptyDataDecls
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      NumericUnderscores
      OverloadedStrings
      PartialTypeSignatures
      PatternGuards
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeFamilies
      TypeSynonymInstances
      ViewPatterns

library
  import: common-ghc-options
  import: common-extensions
  exposed-modules:
      Data.Aeson.Via.Show
      Data.Aeson.Via.Show.Internal
  other-modules:
      Paths_json_via_show
  hs-source-dirs:
      src
  build-depends:
      aeson
    , base >=4.7 && <5
    , text
  default-language: Haskell2010

test-suite unit
  import: common-ghc-options
  import: common-extensions
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Data.Aeson.Via.ShowSpec
      Paths_json_via_show
  hs-source-dirs:
      test/unit
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , containers
    , hspec
    , json-via-show
    , text
    , time
  default-language: Haskell2010
