cabal-version:  2.4
name:           json-wsp
version:        1.2.0
synopsis:       An implementation of JSON-WSP in Haskell
description:    Please see the README on GitHub at <https://github.com/cardanosolutions/ogmios/tree/master/server/modules/json-wsp>
category:       Web
homepage:       https://github.com/cardanosolutions/ogmios#readme
bug-reports:    https://github.com/cardanosolutions/ogmios/issues
author:         KtorZ <matthias.benkort@gmail.com>
maintainer:     matthias.benkort@gmail.com
copyright:      2020-2021 KtorZ
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    LICENSE
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/cardanosolutions/ogmios

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wpartial-fields -Wredundant-constraints -Wunused-packages

library
  import: common-ghc-options
  exposed-modules:
      Codec.Json.Wsp
      Codec.Json.Wsp.Handler
  other-modules:
      Paths_json_wsp
  hs-source-dirs:
      src
  default-extensions:
      BangPatterns
      BinaryLiterals
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      EmptyDataDecls
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      NumericUnderscores
      OverloadedStrings
      PartialTypeSignatures
      PatternGuards
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeFamilies
      TypeSynonymInstances
      ViewPatterns
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , text
  default-language: Haskell2010
